added view all students method, changed getFirst() to get() for older java compatiblity